Improve Message Handling

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,8 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+default_envs =   esp32dev
 
 [env:esp32dev]
 platform = espressif32
@@ -17,9 +19,10 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
-; extra_scripts = upload.py
-; upload_protocol = custom
-; upload_url = http://192.168.178.50/update
+extra_scripts = upload.py
+upload_protocol = custom
+upload_url = http://192.168.178.141/update
+;upload_port=COM4
 [env:nodemcuv2]
 board = nodemcuv2
 platform = espressif8266
