--- a/platformio.ini
+++ b/platformio.ini
@@ -16,10 +16,9 @@ lib_deps =
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	bblanchon/ArduinoJson@^6.19.4
 monitor_speed = 115200
-monitor_filters = esp32_exception_decoder
-; extra_scripts = upload.py
-; upload_protocol = custom
-; upload_url = http://192.168.178.50/update
+extra_scripts = upload.py
+upload_protocol = custom
+upload_url = http://frekvens.lan/update
 [env:nodemcuv2]
 board = nodemcuv2
 platform = espressif8266
